
2019-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: renamed target all to modules as we don't want to
	  auto-generate those

2018-12-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (newcob.val.tar.gz) new target to download from sourceforge
	* Makefile.am: newcob.val.tar.gz / newcob.val.Z are also copied from
	  srcdir if existing there already
	* fix for Bug #563: fall-back to download from sourceforge if download
	  from NIST is not possible
	* Makefile.am (all): new target extracting all tests
	* Makefile.am: additional insert test names when generating the module
	  specific Makefile
	* Makefile.module.in (test-local, test-O-local): new targets to allow
	  running the tests with a GnuCOBOL version that is locally installed
	  instead of the version currently build
	* Makefile.module.in (lib, lib-local): new targets to only compile
	  the module specific libs
	* Makefile.module.in: new targets for single tests
	* report.pl: extracted functions compile_lib and run_test
	* report.pl: allow to run a single test by passing the test name
	  as parameter or compiling libs only by passing "lib"

2018-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: split rules for EXEC85 and EXEC85.cob to prevent
	  unneeded recreation of the source file

2018-05-08  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: new URL for NIST suite, using https

2017-12-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjustments after merge from reportwriter
	* report.pl: retro-fixed RW301 and RW302 to be comp_only
	* RW.txt, summary.txt, summarynoix.txt: adjusted expected results

2017-09-24  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.module.in: (new file) moved content of generated
	  Makefiles to separate template file;
	  splitted into multiple targets and all target
	* Makefile.am: adjusted to `sed` the template instead of
	  using `echo` to create the module Makefile

2017-09-02  Simon Sobisch <simonsobisch@gnu.org>
